# cpp-simple-tda

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
books/: Book.h  BookStack.h
commands/: StartProgram.h
crypt/: CryptMakerFacade.h  ROT13Strategy.h  TextCryptStrategy.h
factories/: MainMenuFactory.h  MenuFactory.h  OperationsMenuFactory.h
input/: Input.h
menu/: MenuWidget.h  Option.h  Widget.h
menu/options/: BreakOption.h  RenderOption.h
menu/widgets/: EncryptTextWidget.h  GradeAverageWidget.h  HelloWidget.h  ItemStackWidget.h  TesteWidget.h
src/: config.h  main.cpp
src/commands/: Healthcheck.cpp  Healthcheck.h  StartProgram.cpp  StartProgram.h
src/crypt/: CryptMakerFacade.cpp  CryptMakerFacade.h  ROT13Strategy.cpp  ROT13Strategy.h  TextCryptStrategy.cpp  TextCryptStrategy.h
src/database/: Connector.cpp  Connector.h
src/exceptions/: BreakException.h  Exception.h
src/facades/: StringFacade.h
src/factories/: MainMenuFactory.cpp  MainMenuFactory.h  MenuFactory.cpp  MenuFactory.h  OperationsMenuFactory.cpp  OperationsMenuFactory.h
src/history/: History.cpp  History.h
src/input/: Input.cpp  Input.h
src/menu/: MenuWidget.cpp  MenuWidget.h  Option.cpp  Option.h  Widget.cpp  Widget.h
src/menu/factories/: MainMenuFactory.cpp  MainMenuFactory.h  MenuFactory.cpp  MenuFactory.h
src/menu/options/: BreakOption.cpp  BreakOption.h  (+4 more)
src/widgets/: EncryptTextWidget.cpp  EncryptTextWidget.h  GradeAverageWidget.cpp  GradeAverageWidget.h  MenuWidget.cpp  MenuWidget.h  PasswordGeneratorWidget.cpp  PasswordGeneratorWidget.h  Widget.cpp
(+10 files in other folders)
